--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -14,15 +14,20 @@ knitr::opts_chunk$set(
 )
 ```
 
+The `quallmer` package is developed to help qualitative researchers leverage the power of large language models for tasks such as coding, annotation, and thematic analysis. It is user-friendly and does not require extensive programming knowledge, making it accessible to researchers from various backgrounds.
 
 Our tutorials provide a brief introduction to the `quallmer` package, which is designed to facilitate the use of large language models (LLMs) for qualitative research tasks. The package relies on the `ellmer` package for LLM interactions, providing a seamless interface for users to work with different LLM providers. For more information on the `ellmer` package and supported LLM interactions, please refer to its documentation [here](https://ellmer.tidyverse.org/index.html).
 
 ## Basic usage
 
+The `quallmer` package is developed for using it in R. Please make sure you have a recent version of [R and RStudio installed](https://posit.co/download/rstudio-desktop/) on your computer. If you are new to R and RStudio, you can find [a great and free-of-charge 1.5h introduction to R and RStudio on instats](https://instats.org/seminar/introduction-to-r-with-rstudio-free-1-h3). 
+
 To get started with `quallmer`, you first need to install the package from GitHub. 
 
 ```{r, eval = FALSE}
+# If you don't have pak installed yet, uncomment and run the following line:
 # install.packages("pak")
+# Then, install quallmer using pak:
 pak::pak("SeraphineM/quallmer")
 ```
 
@@ -41,6 +46,8 @@ Using `annotate()`, users can generate structured, interpretable outputs powered
 
 2. [**Working with an open-source Ollama model**](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/ollama.html): This tutorial will demonstrate how to use the `quallmer` package with an open-source Ollama model for qualitative coding tasks.
 
+3. [**Using predefined tasks**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/overview.html): These illustrations will show you how to utilize the library of predefined annotation tasks available in the `quallmer` package to perform common qualitative coding tasks efficiently.
+
 3. [**Creating custom tasks**](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html): This tutorial will walk you through the process of defining your own custom annotation tasks using the `define_task()` function, allowing you to tailor the LLM's output to your specific research needs.
 
-More tutorials will be added soon. 
+We hope these tutorials will help you get started with the `quallmer` package and empower you to leverage large language models for your qualitative research projects!
