--- a/vignettes/pkgdown/examples/task_sentiment.Rmd
+++ b/vignettes/pkgdown/examples/task_sentiment.Rmd
@@ -26,8 +26,8 @@ texts <- c(
 ### Using `annotate()` for predefined sentiment analysis of texts
 
 ```{r sentiment}
-# Apply predefined sentiment task with sentiment() in the annotate() function
-result <- annotate(texts, task = sentiment(), 
+# Apply predefined sentiment task with task_sentiment() in the annotate() function
+result <- annotate(texts, task = task_sentiment(), 
                    chat_fn = chat_openai, model = "gpt-4o",
                    api_args = list(temperature = 0, seed = 42))
 ```
