adding task_salience

--- a/vignettes/pkgdown/examples/overview.Rmd
+++ b/vignettes/pkgdown/examples/overview.Rmd
@@ -14,6 +14,7 @@ The `quallmer` package currently includes the following predefined tasks:
 | [**Sentiment analysis**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_sentiment.html) | `task_sentiment()` | Rates overall sentiment of text. | Sentiment score (`-1` to `1`) and explanation |
 | [**Stance detection**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_stance.html) | `task_stance()` | Identifies stance/position taking toward a topic. | Stance label (pro/neutral/contra) and explanation |
 | [**Ideological scaling**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_ideology.html) | `task_ideology()` | Places text on an ideological scale (0–10) for a specified dimension. | Ideological score (`0` to `10`) and explanation |
+| [**Topic salience**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_salience.html) | `task_salience()` | Ranks salience of specified topics in text. | Ranked list of topics and explanation |
 
 
 
