--- a/vignettes/pkgdown/examples/task_sentiment.Rmd
+++ b/vignettes/pkgdown/examples/task_sentiment.Rmd
@@ -29,7 +29,8 @@ texts <- c(
 # Apply predefined sentiment task with task_sentiment() in the annotate() function
 result <- annotate(texts, task = task_sentiment(), 
                    chat_fn = chat_openai, model = "gpt-4o",
-                   api_args = list(temperature = 0, seed = 42))
+                   api_args = list(temperature = 0),
+                   params = list(seed = 42))
 ```
 
 
@@ -61,7 +62,8 @@ custom_sentiment <- task(
 # Apply the custom sentiment task
 custom_result <- annotate(texts, task = custom_sentiment, 
                           chat_fn = chat_openai, model = "gpt-4o",
-                          api_args = list(temperature = 0, seed = 42))
+                          api_args = list(temperature = 0),
+                          params = list(seed = 42))
 ```
 ```{r display_results_custom, echo = FALSE}
 # sentiment analysis results table
@@ -85,7 +87,8 @@ likert_sentiment <- task(
 # Apply the Likert scale sentiment task
 likert_result <- annotate(texts, task = likert_sentiment, 
                           chat_fn = chat_openai, model = "gpt-4o",
-                          api_args = list(temperature = 0, seed = 42))
+                          api_args = list(temperature = 0),
+                          params = list(seed = 42))
 ```
 ```{r display_results_likert, echo = FALSE}
 # sentiment analysis results table
