--- a/vignettes/pkgdown/examples/task_salience.Rmd
+++ b/vignettes/pkgdown/examples/task_salience.Rmd
@@ -31,8 +31,7 @@ data_corpus_inaugural <- quanteda::data_corpus_inaugural[57:60]
 # Apply predefined salience task with task_salience() in the annotate() function
 result <- annotate(data_corpus_inaugural, task = task_salience(), 
                    chat_fn = chat_openai, model = "gpt-4o",
-                   api_args = list(temperature = 0),
-                   params = list(seed = 42))
+                   api_args = list(temperature = 0))
 ```
 ```{r display_results, echo = FALSE}
 # results table
@@ -50,8 +49,7 @@ topics <- c("economy", "health", "education", "environment", "foreign policy")
 # Apply predefined salience task with task_salience() in the annotate() function
 result <- annotate(data_corpus_inaugural, task = task_salience(topics), 
                    chat_fn = chat_openai, model = "gpt-4o",
-                   api_args = list(temperature = 0),
-                   params = list(seed = 42))
+                   api_args = list(temperature = 0))
 ```
 ```{r display_results2, echo = FALSE}
 # results table
@@ -101,8 +99,7 @@ custom_task <- task(
 # Apply the customized task in the annotate() function
 custom_result <- annotate(data_corpus_inaugural, task = custom_task, 
                    chat_fn = chat_openai, model = "gpt-4o",
-                   api_args = list(temperature = 0),
-                   params = list(seed = 42))
+                   api_args = list(temperature = 0))
 ```
 ```{r display_custom_results, echo = FALSE}
 # custom results table
