--- a/vignettes/pkgdown/examples/task_sentiment.Rmd
+++ b/vignettes/pkgdown/examples/task_sentiment.Rmd
@@ -29,8 +29,7 @@ texts <- c(
 # Apply predefined sentiment task with task_sentiment() in the annotate() function
 result <- annotate(texts, task = task_sentiment(), 
                    chat_fn = chat_openai, model = "gpt-4o",
-                   api_args = list(temperature = 0),
-                   params = list(seed = 42))
+                   api_args = list(temperature = 0))
 ```
 
 
@@ -62,8 +61,7 @@ custom_sentiment <- task(
 # Apply the custom sentiment task
 custom_result <- annotate(texts, task = custom_sentiment, 
                           chat_fn = chat_openai, model = "gpt-4o",
-                          api_args = list(temperature = 0),
-                          params = list(seed = 42))
+                          api_args = list(temperature = 0))
 ```
 ```{r display_results_custom, echo = FALSE}
 # sentiment analysis results table
@@ -87,8 +85,7 @@ likert_sentiment <- task(
 # Apply the Likert scale sentiment task
 likert_result <- annotate(texts, task = likert_sentiment, 
                           chat_fn = chat_openai, model = "gpt-4o",
-                          api_args = list(temperature = 0),
-                          params = list(seed = 42))
+                          api_args = list(temperature = 0))
 ```
 ```{r display_results_likert, echo = FALSE}
 # sentiment analysis results table
