--- a/vignettes/pkgdown/tutorials/customtask.Rmd
+++ b/vignettes/pkgdown/tutorials/customtask.Rmd
@@ -78,8 +78,7 @@ This step is similar to applying predefined tasks using the `annotate()` functio
 # Apply the custom task to the inaugural speeches corpus
 result <- annotate(data_corpus_inaugural, task = ideology_scores,
                    chat_fn = chat_openai, model = "gpt-4o",
-                   api_args = list(temperature = 0),
-                   params = list(seed = 42))
+                   api_args = list(temperature = 0))
 ```
 
 ```{r display_results, echo = FALSE}
