Simplify qlm_coded object structure
Summary of Changes

  Files Updated

  1. R/qlm_code.R
  - Updated @return documentation to describe tibble with attributes (lines 32-37)
  - Removed qlm_results() from @seealso (lines 39-42)
  - Updated examples to show direct printing instead of calling qlm_results() (lines 44-72)
  - Fixed attribute access examples: attr(coded, "chat_args") instead of coded$settings

  2. R/annotate.R
  - Removed qlm_results() reference from @seealso (line 22)
  - Updated example to show direct printing (lines 31-32)
  - Fixed implementation to use as.data.frame(coded) instead of qlm_results(coded) (line 42)

  3. R/qlm_codebook.R
  - Updated example to show direct printing instead of qlm_results() (line 54)

  4. vignettes/pkgdown/tutorials/customtask.Rmd
  - Updated text to describe qlm_coded as tibble with attributes (line 80)
  - Removed qlm_results() call and variable assignment (lines 89-90)
  - Updated display code to use coded directly (line 96)

  5. NEWS.md
  - Removed qlm_results() from New API section (line 9 deleted)
  - Updated description of qlm_code() to explain it returns a tibble (line 8)
  - Updated Deprecated functions section (line 15)

  6. tests/testthat/test-qlm_results.R
  - Deleted - no longer needed

  7. tests/testthat/test-qlm_code.R
  - Updated print test to check for tibble behavior instead of custom header (lines 174-178)

--- a/vignettes/pkgdown/tutorials/customtask.Rmd
+++ b/vignettes/pkgdown/tutorials/customtask.Rmd
@@ -77,7 +77,7 @@ ideology_codebook <- qlm_codebook(
 
 We use the `qlm_code()` function to apply our custom codebook to the sample corpus of inaugural speeches. We specify the model to use via `model` (in this case, `"openai/gpt-4o"`) and any additional parameters as needed. For example, we set the temperature to 0 for more deterministic outputs, improving consistency in scoring across multiple runs and therefore increasing reliability.
 
-The `qlm_code()` function returns a rich `qlm_coded` object that contains the results along with metadata about the coding process. To extract just the results as a data frame, we use the `qlm_results()` function.
+The `qlm_code()` function returns a `qlm_coded` object, which is a tibble containing the coded results along with metadata stored as attributes. The object prints as a tibble and can be used directly in data manipulation workflows.
 
 ```{r apply-codebook}
 # Apply the custom codebook to the inaugural speeches corpus
@@ -86,14 +86,14 @@ coded <- qlm_code(data_corpus_inaugural,
                   model = "openai/gpt-4o",
                   temperature = 0)
 
-# Extract the results as a data frame
-result <- qlm_results(coded)
+# View the results
+coded
 ```
 
 ```{r display_results, echo = FALSE}
 # Display the ideology scoring results
 library(kableExtra)
-result %>%
+coded %>%
   kable("html", escape = FALSE) %>%
   kable_styling(bootstrap_options = c("striped", "hover")) %>%
   column_spec(3)
